Fixed header on phone aligning right

--- a/src/Styles/phone_index.css
+++ b/src/Styles/phone_index.css
@@ -12,15 +12,15 @@
     border-width: 0;
     border-bottom-width: 2px;
     top: 0;
+    left: 0;
     z-index: 1000;
     border-style: solid;
 }
 
 
 .phone-header_image {
-    max: auto;
+    width: auto;
     max-height: 80%;
-    margin-left: 10px;
     margin-right: 15px;
 }
 
